--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.7.0",
     "@yudiel/react-qr-scanner": "^2.2.1",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^12.9.2",
+    "html5-qrcode": "^2.3.8",
+    "jsonwebtoken": "^9.0.2",
+    "jsqr": "^1.4.0",
     "next": "15.3.1",
+    "prisma": "^6.7.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-qr-reader": "^3.0.0-beta-1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-anchor-link-smooth-scroll": "^1.0.5",
