--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-qr-reader": "^3.0.0-beta-1"
   },
   "devDependencies": {
