--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "framer-motion": "^12.9.2",
     "html5-qrcode": "^2.3.8",
+    "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
     "jsqr": "^1.4.0",
     "next": "15.3.1",
