--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@prisma/client": "^6.7.0",
     "@yudiel/react-qr-scanner": "^2.2.1",
+    "@prisma/client": "^6.7.0",
     "bcrypt": "^5.1.1",
     "framer-motion": "^12.9.2",
     "html5-qrcode": "^2.3.8",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
-    "jsqr": "^1.4.0",
     "next": "15.3.1",
     "prisma": "^6.7.0",
     "qrcode.react": "^4.2.0",
@@ -25,9 +25,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-qr-reader": "^3.0.0-beta-1",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
