--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@yudiel/react-qr-scanner": "^2.2.1",
     "@prisma/client": "^6.7.0",
+    "@yudiel/react-qr-scanner": "^2.2.1",
     "bcrypt": "^5.1.1",
     "framer-motion": "^12.9.2",
     "html5-qrcode": "^2.3.8",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "prisma": "^6.7.0",
     "qrcode.react": "^4.2.0",
