--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.7.0",
     "@yudiel/react-qr-scanner": "^2.2.1",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.9",
     "framer-motion": "^12.9.2",
     "html5-qrcode": "^2.3.8",
     "jose": "^6.0.10",
@@ -24,6 +25,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5"
