--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
     environment:
       DATABASE_URL: "postgresql://medilink_user:medilink_password@postgres:5432/medilinkdb?schema=public"
     ports:
-      - 7672:3000
+      - 7672:3000 # Next JS
+      - 7673:3001 # Websocket
     depends_on:
       - postgres
 
