--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "NODE_ENV=production bun server.ts",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "bun prisma/seed.ts"
+  },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.7.0",
@@ -20,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
+    "openai": "^5.5.1",
     "prisma": "^6.7.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
