--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "seed": "bun prisma/seed.ts"
   },
   "dependencies": {
+    "@google/genai": "^1.7.0",
+    "@google/generative-ai": "^0.24.1",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.7.0",
     "@yudiel/react-qr-scanner": "^2.2.1",
